# pyAtmosphere

./: .gitignore  CITATION.cff  README.md  main.ipynb  pyproject.toml  requirements.txt
aqc/: aqc.py  grid.py  measures.py  pathes.py  phase_screens.py  pupils.py  simulation.py  sources.py  utils.py
aqc/results/: beam.py  pdt.py  result.py  si.py  structure_function.py  wind.py
aqc/simulations/: __init__.py  beam_propagation.py  eta.py  pdt.py  sf.py  si.py  simulation.py  simulations.py  time_coherence.py
aqc/theory/: models.py  pdt.py  sources.py  vacuum.py
aqc/theory/atmosphere/: __init__.py  beam_wandering.py  gamma2.py  long_term.py  short_term.py  si.py
aqc/theory/phase_screens/: sf.py
docs/source/: api_reference.rst  conf.py  getting_started.rst  index.rst  tutorials.rst  user_guide.rst
pyatmosphere/: __init__.py  channels.py  gpu.py  grid.py  grids.py  pathes.py  phase_screens.py  simulation.py  sources.py  utils.py
pyatmosphere/results/: __init__.py  beam.py  pdt.py  si.py  structure_function.py  wind.py
pyatmosphere/simulations/: __init__.py  beam.py  measure.py  pdt.py  result.py  si.py  simulation.py  structure_function.py  wind.py
pyatmosphere/theory/: models.py  pdt.py  sources.py  vacuum.py
pyatmosphere/theory/atmosphere/: __init__.py  beam_wandering.py  gamma2.py  long_term.py  si.py
pyatmosphere/theory/pdt/: __init__.py  beam_wandering.py  circular_beam.py  elliptic_beam.py  pdt.py
pyatmosphere/theory/phase_screens/: __subharmonics.py  sf.py
tests/: itest_atmosphere.ipynb  itest_sources.ipynb  itest_theoretical_SI.ipynb  itest_vacuum_propagation.ipynb
